@@ -4,14 +4,14 @@
 #'
 #' @export
 
-gpuPalettes <- list(atom = c("#dedcd5", "#991f16", "#3b9b6d", "#584b4f", "#72acab", 
-    "#ca8c81"), cisl = c("#c7cbce", "#96a3a3", "#687677", "#222d3d", "#25364a", "#c77f20", 
-    "#e69831", "#e3af16", "#e4be29", "#f2ea8b"), github = c("#232323", "#d73a49", 
-    "#22863a", "#032f62", "#005cc5", "#6f42c1", "#e36209", "#6a737d"), google = c("#fc002e", 
-    "#00b852", "#4c67f7", "#ffc100", "#ff2163", "#737373"), google2 = c("#ed003b", 
-    "#00b160", "#5078c5", "#fce733", "#c1c1c1"), insileco = c("#212121", "#3fb3b2", 
-    "#ffdd55", "#c7254e", "#1b95e0", "#8555b4", "#757575"), slack = c("#2ea664", 
-    "#2d9ee0", "#d72b3f", "#4d394b", "#005e99", "#f26130", "#ff9000", "#eb959f", 
+gpuPalettes <- list(atom = c("#dedcd5", "#991f16", "#3b9b6d", "#584b4f", "#72acab",
+    "#ca8c81"), cisl = c("#c7cbce", "#96a3a3", "#687677", "#222d3d", "#25364a", "#c77f20",
+    "#e69831", "#e3af16", "#e4be29", "#f2ea8b"), github = c("#232323", "#d73a49",
+    "#22863a", "#032f62", "#005cc5", "#6f42c1", "#e36209", "#6a737d"), google = c("#fc002e",
+    "#00b852", "#4c67f7", "#ffc100", "#ff2163", "#737373"), google2 = c("#ed003b",
+    "#00b160", "#5078c5", "#fce733", "#c1c1c1"), insileco = c("#212121", "#3fb3b2",
+    "#ffdd55", "#c7254e", "#1b95e0", "#8555b4", "#757575"), slack = c("#2ea664",
+    "#2d9ee0", "#d72b3f", "#4d394b", "#005e99", "#f26130", "#ff9000", "#eb959f",
     "#a0a0a2", "#0576b9"))
 
 
@@ -20,16 +20,25 @@ gpuPalettes <- list(atom = c("#dedcd5", "#991f16", "#3b9b6d", "#584b4f", "#72aca
 #' A couple of color palettes mainly insipered by popular websites.
 #'
 #' @param names names of desired color palettes; if \code{NULL}, color palettes available are printed.
+#' @param ncol An integer indicating the number of colors to be returned (involves a call to \link[grDevices]{colorRampPalette}). Default is set to `\code{NULL}` in which case the number in the one the palette is made of.
 #'
 #' @return A vector of character strings of the hexadecimal colors values.
 #' @export
 #' @keywords colors, palette
 #' @examples
 #' showPalette(gpuPalette(c('atom', 'cisl')))
+#' showPalette(gpuPalette('cisl', 100))
 
-gpuPalette <- function(names = NULL) {
+gpuPalette <- function(names = NULL, ncol = NULL) {
     tmp <- names(gpuPalettes)
-    if (is.null(names)) 
-        message(paste0("Color palettes available are: \n  ", paste(tmp, collapse = ", "))) else stopifnot(all(names %in% names(gpuPalettes)))
-    unlist(gpuPalettes[names])
+    if (is.null(names)) {
+        message(paste0("Color palettes available are: \n  ", paste(tmp, collapse = ", ")))
+        return(invisible(NULL))
+    } else {
+        stopifnot(all(names %in% names(gpuPalettes)))
+        out <- unlist(gpuPalettes[names])
+        if (!is.null(ncol)) {
+            colorRampPalette(out)(ncol)
+        } else return(out)
+    }
 }
